<resources>
    <string name="app_name">Calculator</string>
    <string name="answer">Answer</string>
    <string name="enter_second_number">Enter second Number</string>
    <string name="enter_first_number">Enter First Number</string>
    <string name="img">img</string>
    <string name="Add">+</string>
    <string name="Sub">-</string>
    <string name="Mul">*</string>
    <string name="Div">/</string>
</resources>